--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-repository: tomjohnson1492/documentation-theme-jekyll
+#repository: tomjohnson1492/documentation-theme-jekyll
 
 baseurl: / #/qewdjs-docs
 
