--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -8,7 +8,7 @@ topnav:
     - title: About
       external_url: http://qewdjs.com/#about
     - title: Documentation
-      external_url: http://qewdjs.com/#documentation
+      external_url: http://docs.qewdjs.com
     - title: Community
       external_url: http://qewdjs.com/#contact
 
