--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ site_title: Jekyll theme for documentation
 company_name: M/Gateway Ltd
 # this appears in the footer
 
-github_editme_path: /robtweed/qewdjs-docs/blob/gh-pages/
+# github_editme_path: /robtweed/qewdjs-docs/blob/gh-pages/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 #disqus_shortname: idrbwjekyll
