--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ topnav_title: Jekyll Documentation Theme
 site_title: Jekyll theme for documentation
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
-company_name: M/Gateway Ltd
+company_name: M/Gateway Developments Ltd
 # this appears in the footer
 
 # github_editme_path: /robtweed/qewdjs-docs/blob/gh-pages/
