--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -25,6 +25,7 @@ entries:
       output: web, pdf
       type: homepage
   - title: Installation
+    url: /install_qewd.html
     output: web, pdf
     folderitems:
     - title: Installing QEWDjs
