--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -31,6 +31,13 @@ entries:
   #  url: /install_qewd.html
   #  output: web, pdf
   #  folderitems:
+  
+  - title: Learning QEWDjs
+    output: web, pdf
+    folderitems:
+    - title: Training Materials
+      url: /qewd_training.html
+      output: web, pdf
        
   - title: Exploring QEWDjs 
     output: web, pdf
@@ -50,12 +57,6 @@ entries:
     - title: QEWD Release News/Notes
       url: /releasenotes.html
       output: web, pdf  
-    - title: Training Materials 
-      url: /qewd_training.html
-      output: web, pdf   
- # - title: Training Materials 
- #   output: web, pdf
- #   folderitems:  
          
   - title: FAQ & Troubleshooting
     output: web, pdf
